# clinical_trials

./: .env  .env.test  .gitignore  DEMO.md  LICENSE  README.md  lets_go.md  main.py  pyproject.toml
agents/: compiled_agents.py  email_agent.py  explaination_agent.py  reranker_agent.py  retriever_agent.py  states.py  telephony_agent.py  validation_agent.py
gradio_ui/: gradio_main.py
models/: __init__.py  telephony_models.py
preprocessing/: indexing.py  save_to_json.py
prompts/: llm_prompt.yaml  telephony_prompt.yaml
tools/: retrieval_tool.py
