[project]
name = "clinical-trials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chroma>=0.2.0",
    "chromadb>=1.4.1",
    "fastapi>=0.128.4",
    "gradio>=5.0.0",
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-huggingface>=1.2.0",
    "langgraph>=1.0.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.6.9",
    "livekit>=1.0.25",
    "livekit-agents[deepgram,google,silero,turn-detector]~=1.3",
    "pandas>=3.0.0",
    "sentence-transformers>=5.2.2",
    "typer>=0.12.0",
]
